[package]
name = "yoobu-media"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yoobu-media"
path = "src/main.rs"

[dependencies]
# HTTP framework — composable, async-first, zero-cost extractors
axum = { version = "0.7", features = ["multipart"] }

# Async runtime — Rust doesn't ship one by default, you pick your own
tokio = { version = "1", features = ["full"] }

# Middleware tower-compatible (request tracing, body size limits)
tower-http = { version = "0.5", features = ["trace"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# JSON ser/de
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AWS S3-compatible client (works with R2 and MinIO)
aws-sdk-s3 = "1"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }

# Image decoding, resizing
# default-features = false → compile only what we need (jpeg, png, webp)
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

# WebP encoding with quality control (wraps libwebp, bundles C sources — no system dep needed)
webp = "0.3"

# Raw byte buffer
bytes = "1"

# Constant-time comparison for Bearer token validation (prevents timing attacks)
subtle = "2"

# Ergonomic error types with #[derive(Error)]
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
